# delaunay

./: .auto-changelog  .codacy.yml  .codecov.yml  .coderabbit.yml  .gitignore  .gitleaks.toml  .gitmessage  .markdownlint.json  .semgrep.yaml  .taplo.toml  .yamllint  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REFERENCES.md  SECURITY.md  WARP.md  cliff.toml  clippy.toml  cspell.json  dprint.json  justfile  proptest.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  semgrep.yaml  tarpaulin.toml  temp_fix.txt  ty.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codacy.yml  codecov.yml  codeql.yml  generate-baseline.yml  papers.yml  profiling-benchmarks.yml  release-benchmarks.yml  rust-clippy.yml  semgrep-sarif.yml  update-code-of-conduct.yml  zizmor.yml
benches/: PERFORMANCE_RESULTS.md  README.md  allocation_hot_paths.rs  assign_neighbors_performance.rs  baseline_results.txt  boundary_uuid_iter.rs  ci_performance_suite.rs  circumsphere_containment.rs  cold_path_predicates.rs  delaunay_repair.rs  delete_vertex.rs  edge_key_queries.rs  helpers.rs  large_scale_performance.rs  locate.rs  memory_scaling.rs  microbenchmarks.rs  pachner_stress.rs  pl_manifold_repair.rs  profiling_suite.rs  remove_vertex.rs  small_scale_triangulation.rs  tds_clone.rs  topology_guarantee_construction.rs  triangulation_creation.rs  triangulation_vs_hull_memory.rs  util.rs
benches/common/: bench_utils.rs  flip_fixtures.rs  flip_workflows.rs
docs/: Cell_refactoring.md  KNOWN_ISSUES_4D.md  OPTIMIZATION_ROADMAP.md  OPTIMIZING_BOWYER_WATSON.md  ORIENTATION_SPEC.md  README.md  REFACTORING_STRATEGY.md  RELEASING.md  TODO.md  UUID_MIGRATION_INVENTORY.md  api_design.md  code_organization.md  code_organization.md.backup  diagnostics.md  fix-delaunay.md  invariants.md  issue_120_investigation.md  jaccard.md  limitations.md  mesh_export.md  numerical_robustness_guide.md  optimization_recommendations.md  phase3.md  phase4.md  phase_3a_README.md  phase_3a_changes_summary.md  phase_3a_implementation_guide.md  phase_3a_migration_plan.md  phase_3c_action_plan.md  production_review_remediation_checklist.md  property_testing_summary.md  roadmap.md  testing.md  topology.md  validation.md  vertex_uuid_iter_optimizations.md  workflows.md
docs/architecture/: README.md  module_map.md  module_patterns.md  prelude_reference.md  project_structure.md
docs/archive/: OPTIMIZATION_ROADMAP.md  fix-delaunay.md  invariant_validation_plan.md  issue_120_investigation.md  issue_204_investigation.md  issue_341_n1_repair_plan.md  jaccard.md  known_issues_4d_2026-04-23.md  optimization_recommendations_historical.md  phase2_bowyer_watson_optimization.md  phase2_uuid_iter_optimization.md  phase4.md  phase_3a_implementation_guide.md  phase_3c_action_plan.md  testing.md  todo_2026-04-23.md  topology_integration_design_historical.md
docs/dev/: README.md  commands.md  debug_env_vars.md  docs.md  git.md  notebooks.md  perf-tuning.md  python.md  rust.md  testing.md  tooling-alignment.md  workflows.md
docs/templates/: README.md  changelog.hbs
examples/: README.md  boundary_analysis_trait.rs  convex_hull_3d_1000_points.rs  convex_hull_3d_100_points.rs  convex_hull_3d_20_points.rs  convex_hull_3d_50_points.rs  data_and_serialization.rs  delaunayize_repair.rs  diagnostics.rs  dynamic_lifecycle.rs  implicit_conversion.rs  into_from_conversions.rs  memory_analysis.rs  numerical_robustness.rs  pachner_roundtrip_4d.rs  point_comparison_and_hashing.rs  spherical_construction.rs  test_alloc_api.rs  test_circumsphere.rs  topology_editing.rs  topology_editing_2d_3d.rs  toroidal_construction.rs  triangulation_3d_1000_points.rs  triangulation_3d_100_points.rs  triangulation_3d_20_points.rs  triangulation_3d_50_points.rs  triangulation_and_hull.rs  zero_allocation_iterator_demo.rs
just/: helpers.just
notebooks/: 00_quickstart.ipynb  01_validation.ipynb  01_validation_check_visualization.ipynb  02_pachner_stress_cli.ipynb  02_spherical_hero.ipynb  nonfaithful_embedding.ipynb
papers/: ARTIFACT.md  README.md  validation.bib  validation.tex
scripts/: README.md  archive_changelog.py  benchmark_models.py  benchmark_parser.sh  benchmark_utils.py  cargo_tool_versions.sh  changelog_utils.py  check_docs_version_sync.py  compare_benchmarks.sh  compare_storage_backends.py  enhance_commits.py  generate_baseline.sh  generate_changelog.sh  hardware_info.sh  hardware_utils.py  notebook_check.py  paper_check.py  paper_pdf_normalize.py  paper_source_date.py  performance_summary_utils.py  postprocess_changelog.py  run_all_examples.sh  semgrep_fixture_config.py  slurm_storage_comparison.sh  subprocess_utils.py  tag-from-changelog.sh  tag_release.py
src/: bench_fixtures.rs  config.rs  lib.rs  main.rs  triangulation.rs
src/core/: adjacency.rs  (+26 more)
tests/: COVERAGE.md  README.md  allocation_api.rs  bench_helpers_test.rs  bench_util_test.rs  benchmark_flip_fixtures.rs  check_perturbation_stats.rs  circumsphere_debug_tools.rs  cli.rs  conflict_region_verification.rs  convex_hull_bowyer_watson_integration.rs  coordinate_conversion_errors.rs  debug_delaunay_violation_5d.rs  dedup_batch_construction.rs  delaunay_edge_cases.rs  delaunay_incremental_insertion.rs  delaunay_public_api_coverage.rs  delaunay_repair_fallback.rs  delaunayize_workflow.rs  euler_characteristic.rs  example_workflows.rs  insert_with_statistics.rs  integration_robust_bowyer_watson.rs  k3_cycle_predicate.rs  large_scale_debug.rs  mesh_export.rs  pachner_roundtrip.rs  prelude_exports.rs  proptest_bowyer_watson.proptest-regressions  proptest_bowyer_watson.rs  proptest_cell.rs  proptest_convex_hull.proptest-regressions  proptest_convex_hull.rs  proptest_delaunay_condition.proptest-regressions  proptest_delaunay_condition.rs  proptest_delaunay_triangulation.proptest-regressions  proptest_delaunay_triangulation.rs  proptest_duplicates.proptest-regressions  proptest_duplicates.rs  proptest_euler_characteristic.proptest-regressions  (+52 more)
(+152 files in other folders)
