[package]
name = "delaunay"
version = "0.6.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Adam Getchell <adam@adamgetchell.org>"]
homepage = "https://github.com/acgetchell/delaunay"
documentation = "https://docs.rs/delaunay"
repository = "https://github.com/acgetchell/delaunay"
description = "A d-dimensional Delaunay triangulation library with float coordinate support"
license = "BSD-3-Clause"
keywords = ["delaunay", "triangulation", "comp-geometry", "mesh"]
categories = ["algorithms", "mathematics", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocation-counter = { version = "0.8.1", optional = true }  # for memory profiling
anyhow = "1.0.100"
arc-swap = "1.7.1"
approx = "0.5.1"
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
rustc-hash = "2.1.1"  # Fast non-cryptographic hashing for performance
smallvec = { version = "1.15.1", features = ["serde"] }  # Stack allocation for small collections
nalgebra = "0.34.1"
num-traits = "0.2.19"
ordered-float = { version = "5.1.0", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_test = "1.0.177"
slotmap = { version = "1.1.1", features = ["serde"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
pastey = "0.2.0"
proptest = "1.9.0"
sysinfo = "0.37.2"  # Process memory monitoring for benchmarks

[features]
count-allocations = ["allocation-counter"]
bench = []  # Enable benchmark-style tests and performance analysis
test-debug = []  # Enable verbose debug output in tests for development
dense-slotmap = []  # Use DenseSlotMap instead of SlotMap for performance comparison
slow-tests = []  # Enable slow-running integration tests (100+ vertices, multiple dimensions)

[[bench]]
name = "circumsphere_containment"
harness = false

[[bench]]
name = "triangulation_creation"
harness = false

[[bench]]
name = "microbenchmarks"
harness = false

[[bench]]
name = "ci_performance_suite"
harness = false

[[bench]]
name = "profiling_suite"
harness = false

[[bench]]
name = "large_scale_performance"
harness = false

[lints.rust]
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "warn"


[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = { level = "warn", priority = -1 }
# Allow multiple crate versions due to transitive dependencies
multiple_crate_versions = "allow"
