[package]
name = "delaunay"
version = "0.7.8"
edition = "2024"
rust-version = "1.97.0"
autobins = false
authors = [ "Adam Getchell <adam@adamgetchell.org>" ]
homepage = "https://github.com/acgetchell/delaunay"
documentation = "https://docs.rs/delaunay"
repository = "https://github.com/acgetchell/delaunay"
description = "D-dimensional Delaunay triangulations and convex hulls in Rust, with exact predicates, deterministic degeneracy handling, explicit topology validation, and bistellar flips for finite point sets."
license = "BSD-3-Clause"
keywords = [ "delaunay", "triangulation", "geometry", "convex-hull", "simplicial-complex" ]
categories = [ "algorithms", "mathematics", "science" ]
readme = "README.md"
include = [
    "/AGENTS.md",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/REFERENCES.md",
    "/SECURITY.md",
    "/benches/PERFORMANCE_RESULTS.md",
    "/benches/**/*.rs",
    "/benches/README.md",
    "/docs/*.md",
    "/docs/architecture/*.md",
    "/docs/archive/changelog/*.md",
    "/docs/dev/*.md",
    "/docs/dev/rust/*.md",
    "/docs/images/*.png",
    "/examples/**/*.rs",
    "/examples/README.md",
    "/notebooks/*.ipynb",
    "/papers/*.md",
    "/papers/*.bib",
    "/papers/*.pdf",
    "/papers/*.tex",
    "/papers/generated/*.png",
    "/src/**/*.rs",
    "/tests/*.proptest-regressions",
    "/tests/*.rs",
    "/tests/COVERAGE.md",
    "/tests/README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[dependencies]
allocation-counter = { version = "0.8.1", optional = true } # for memory profiling
arc-swap = "1.9.2"
clap = { version = "4.6.1", features = [ "derive" ], optional = true }
la-stack = { version = "0.4.3", default-features = false, features = [ "exact" ] }
tracing = { version = "0.1.44", default-features = false, features = [ "std" ] }
rustc-hash = "2.1.3" # Fast non-cryptographic hashing for performance
smallvec = { version = "1.15.2", features = [ "serde" ] } # Stack allocation for small collections
num-traits = "0.2.19"
ordered-float = { version = "5.3.0", features = [ "serde" ] }
rand = "0.10.2"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = { version = "1.0.150", optional = true }
slotmap = { version = "1.1.1", features = [ "serde" ] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = [ "v4", "serde", "fast-rng" ] }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.8.2", features = [ "html_reports" ] }
pastey = "0.2.3"
proptest = "1.11.0"
serde_json = "1.0.150"
sysinfo = { version = "0.39.5", default-features = false, features = [ "system" ] } # Process memory monitoring for benchmarks
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }

[features]
# Dependency-backed feature gates.
cli = [ "dep:clap", "dep:serde_json" ] # Build the companion `delaunay` command-line workflows.
count-allocations = [ "dep:allocation-counter" ] # Enable allocation counting through the optional profiler dependency.

# cfg-only feature gates.
#
# These features intentionally do not enable dependencies. They select optional
# diagnostics, logging, or long-running tests through `#[cfg(feature = "...")]`.
bench = [  ] # Enable doc-hidden internal fixtures needed by repair benchmarks.
bench-logging = [  ] # Enable extra benchmark logging for CI diagnostics.
diagnostics = [  ] # Enable opt-in diagnostic helpers and verbose test diagnostics.
slow-tests = [  ] # Enable correctness tests that exceed the default-suite 10-second budget.

# Performance profile for benchmark baselines, comparisons, summaries, and
# profiling. Comprehensive CI validation intentionally uses Cargo's default
# release profile for compile checks because it is catching errors, not
# producing benchmark measurements.
[profile.perf]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[[bench]]
name = "allocation_hot_paths"
path = "benches/allocation_hot_paths.rs"
harness = false

[[bench]]
name = "ci_performance_suite"
path = "benches/ci_performance_suite.rs"
harness = false

[[bench]]
name = "circumsphere_containment"
path = "benches/circumsphere_containment.rs"
harness = false

[[bench]]
name = "cold_path_predicates"
path = "benches/cold_path_predicates.rs"
harness = false

[[bench]]
name = "delaunay_repair"
path = "benches/delaunay_repair.rs"
harness = false

[[bench]]
name = "profiling_suite"
path = "benches/profiling_suite.rs"
harness = false

[[bench]]
name = "pachner_stress"
path = "benches/pachner_stress.rs"
harness = false

[[bin]]
name = "delaunay"
path = "src/main.rs"
required-features = [ "cli" ]

[[bench]]
name = "pl_manifold_repair"
path = "benches/pl_manifold_repair.rs"
harness = false
required-features = [ "bench" ]

[[bench]]
name = "delete_vertex"
path = "benches/delete_vertex.rs"
harness = false

[[bench]]
name = "locate"
path = "benches/locate.rs"
harness = false

[[bench]]
name = "tds_clone"
path = "benches/tds_clone.rs"
harness = false

[[bench]]
name = "topology_guarantee_construction"
path = "benches/topology_guarantee_construction.rs"
harness = false

[lints.rust]
# Per RFC 3389: lint groups must use a lower (more negative) priority so specific
# lints at default priority 0 deterministically override the group level.
warnings = { level = "deny", priority = -1 }
unsafe_code = "forbid"
dead_code = { level = "warn", priority = 0 }
missing_docs = { level = "deny", priority = 0 }
unexpected_cfgs = { level = "warn", check-cfg = [ "cfg(docsrs)" ] }

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[lints.clippy]
extra_unused_type_parameters = "warn"
pedantic = { level = "warn", priority = -1 }
